fix(replay): converge PR147 canonical core facts
- separate HP raw state from terminal/death lifecycle, including positive-HP drowning
- preserve 0xFFFD/0xFFFE terminal provenance without inventing HP=0
- make playback/death reconciliation consume one terminal authority
- fail closed for unsupported Type7/Type10 versions and attached local transforms
- productionize Type31 marker-size and Type39 aim-ray events
- join Type31/39 into recorder targeting facts

Repository-level PR147 convergence pass; consumer/AoI migration continues in the same PR.